--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^0.2.28",
+    "@unreal/pan": "^0.0.22",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "save": "^2.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
